# uniuni

./: CMakeLists.txt  README.md  README.rst  prj.conf
boards/arm/eb01_pcb_reva/: Kconfig.board  Kconfig.defconfig  eb01_pcb_reva.dts  eb01_pcb_reva.yaml  eb01_pcb_reva_defconfig
src/: core.c  core.h  fwconfig.h  main.c  version.c  version.h
src/ble/: bluetooth.c  bluetooth.h  eddystone.c  eddystone.h  uuid.h
src/drivers/: board.c  board.h
src/drivers/adc/: drv_adc.c  drv_adc.h
src/drivers/buttons/: drv_button.c  drv_button.h
src/drivers/leds/: drv_leds.c  drv_leds.h
src/drivers/pwr/: drv_pwr.c  drv_pwr.h
src/drivers/sound/: drv_sound.c  drv_sound.h
tools/: ReadMe.txt  fwDump.bat  fwUpload.bat  jLinkDumpScript.jlink  jLinkUploadScript.jlink
